# glc_v2

./: .gitignore  CLAUDE.md  FINDINGS.md  FIXES.md  LICENSE  LIVE_ATTACK_REVIEW.md  PART2_CANDIDATES.md  PART2_FINDINGS.md  README.md  SUBMIT.md  VERIFY.md  leak_runner_app.py  modal_app.py  modal_app.py.backup  modal_app.py.full  pull_desc.md  pyproject.toml  repro_cache_cross_agent.py  repro_gmail_sender_auth.py  repro_policy_glob_newline.py  repro_ratelimit_idle_evict.sh  repro_ssrf_dns_rebind.sh  repro_trust_level_injection.py  repro_trust_spoof.py  repro_twilio_mms_dns_ssrf.sh  requirements-modal.txt  requirements.lock.txt  test_all_leaks.py  trust_issue_test.py  verify_dashboard.html  webhook_verify_test.py  week12_assignment_readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
daemon/: install.sh  launchd.plist.template  systemd.service.template  windows-service.xml.template
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  ATTACK_GUIDE.md  MODAL_GUIDE.md  PART1_SUBMISSION.md  POLICY_GUIDE.md  V1_ARCHITECTURE_archived.md  V1_README_archived.md  VOICE_GUIDE.md  advanced_issue_found.md  attack_chain_fix.md  deploy_to_modal.md  fix_security_breach.md  how_to_test.md  modal_class_notes.md  modal_sandbox_more_test.md  security_report.md  strides_testing.md  telegram_setup.md  testing_signal_adapter.md  threat_model.md  tooling_audit.md
findings/: README.md
glc/: __init__.py  cache.py  channels.yaml  cli.py  config.py  db.py  dev_env.py  embedders.py  http_client.py  llm_schemas.py  main.py  pricing.py  providers.py  routing.py  test_env_breach.py
leak_runner/: exploits.py
modal/: deploy_all.py
part2/: repro_artifact_unauth.py  repro_cache_cross_tenant.py  repro_mention_gate_bypass.py  repro_ratelimit_bypass.py  repro_voice_budget.py
pentest/: ASSIGNMENT_BRIEF.md  ATTACK_CATALOG.md  PEN_TEST_REPORT_TEMPLATE.md  THREAT_MODEL.md
repro/: part2_cost_attribution.py
scripts/: check_pr_boundaries.py  code_audit_agent.py  repro_audit_config_dir.py  repro_auto_route_system_sizing.py  repro_command_matches_case.py  repro_elevenlabs_voice_id_traversal.py  repro_kill_loopback_proxy.py  repro_path_glob_expanduser.py  repro_whatsapp_unsigned_dict.py  scorecard.py  validate_claims.py  validate_envelope.py  validate_policy.py
tests/: conftest.py  test_agent_session_validation.py  test_allowlists_mention_verification.py  test_allowlists_trust.py  test_audit_chain.py  test_audit_log.py  test_auto_route_system_sizing.py  test_batch_concurrency_bounds.py  test_batch_ratelimit_bypass.py  test_cf1_router_injection.py  test_cf2_schema_bomb.py  test_cf3_error_leak.py  test_cf4_channel_cap.py  test_cf5_routing_oracle.py  test_channel_hardening.py  test_channel_process_isolation.py  test_channel_spoof.py  test_channel_webhook_route.py  test_channel_ws_security.py  test_channels_webhook_verify.py  test_channels_ws_trust.py  test_chat_tool_call_limit.py  test_control_plane.py  test_cost_attribution.py  (+71 more)
(+299 files in other folders)
